Added a message for closed modules in java9+